add fest assert dependency + some cleaning

--- a/pom.xml
+++ b/pom.xml
@@ -1,96 +1,103 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.riadh.sampleproject</groupId>
-  <artifactId>unit-tests-training</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>[${project.packaging}] Formation Tests Unitaire:: ${project.artifactId}</name>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.riadh.sampleproject</groupId>
+	<artifactId>unit-tests-training</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>[${project.packaging}] Formation Tests Unitaire:: ${project.artifactId}</name>
 
-  <properties>
-    <version.junit>4.8.1</version.junit>
-    <version.mockito>1.8.5</version.mockito>
-    <version.hamcrest>1.1</version.hamcrest>
-    <version.commons-lang>2.6</version.commons-lang>
-    <version.commons-io>1.3.1</version.commons-io>
-    <version.spring>3.0.5.RELEASE</version.spring>
-    <version.logback>0.9.28</version.logback>
-    <version.slf4j>1.6.1</version.slf4j>
-  </properties>
+	<properties>
+		<version.junit>4.10</version.junit>
+		<version.mockito>1.9.5</version.mockito>
+		<version.fest-assert>1.4</version.fest-assert>
+		<version.hamcrest>1.1</version.hamcrest>
+		<version.commons-lang>2.6</version.commons-lang>
+		<version.commons-io>1.3.1</version.commons-io>
+		<version.spring>3.2.2.RELEASE</version.spring>
+		<version.logback>0.9.28</version.logback>
+		<version.slf4j>1.6.1</version.slf4j>
+	</properties>
 
-  <scm>
-    <connection>scm:svn:http://sources.mpw.fra/unit-testing-training/trunk</connection>
-    <developerConnection>scm:svn:http://sources.mpw.fra/unit-testing-training/trunk</developerConnection>
-    <url>http://demandes.mpw.fra/projects/unit-testing-training/repository</url>
-  </scm>
+	<scm>
+		<connection>scm:https://github.com/riadh-mnasri/unit-testing-demo.git</connection>
+		<developerConnection>scm:https://github.com/riadh-mnasri/unit-testing-demo.git</developerConnection>
+		<url>https://github.com/riadh-mnasri/unit-testing-demo.git</url>
+	</scm>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${version.junit}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>${version.mockito}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <version>${version.hamcrest}</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>${version.commons-lang}</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>${version.commons-io}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>${version.spring}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>${version.spring}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>${version.spring}</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <version>${version.logback}</version>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${version.logback}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${version.slf4j}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>${version.slf4j}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>log4j-over-slf4j</artifactId>
-      <version>${version.slf4j}</version>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${version.junit}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${version.mockito}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-assert</artifactId>
+			<version>${version.fest-assert}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>${version.hamcrest}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${version.commons-lang}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${version.commons-io}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${version.spring}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${version.spring}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${version.spring}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${version.logback}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${version.logback}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${version.slf4j}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${version.slf4j}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<version>${version.slf4j}</version>
+		</dependency>
+	</dependencies>
 
 </project>
